--- a/Site web/website/templates/home.html
+++ b/Site web/website/templates/home.html
@@ -1,15 +1,5 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
+{% extends "base.html" %} {% block title %}Flouze{% endblock %} {% block content
 %}
-<div class="w3-display-topleft" style="width:150px">
-<ul class="w3-ul w3-border w3-light-blue w3-border-light-blue w3-card-2">
-  <li class="w3-center w3-border-white"><h4>Participants</h4></li>
-  <li class="w3-border-0">Baptiste<i class="fa fa-star w3-right"> 0</i></li>
-  <li class="w3-border-0">Juliette<i class="fa fa-star w3-right"> 0</i></li>
-  <li class="w3-border-0">Léa<i class="fa fa-star w3-right"> 0</i></li>
-  <li class="w3-border-0">Margot<i class="fa fa-star w3-right"> 0</i></li>
-  <li class="w3-border-0">Sylvain<i class="fa fa-star w3-right"> 0</i></li>
-</ul>
-</div>
 
 <div class="w3-container w3-center w3-teal" style="height:80px">
   <h3 class="w3-right w3-xxlarge">{{user.flouze}} <img src="https://cdn-icons-png.flaticon.com/512/217/217853.png" class="w3-round" style="width:42px" alt="Coin"></h3>
@@ -17,10 +7,15 @@
 <div class="w3-container w3-center">
 <form method="POST">
 <button type="submit" class="w3-button w3-xlarge w3-circle w3-red w3-card-4 w3-margin" name="increment" value="increment">+</button>
+<button type="submit" class="w3-btn w3-xlarge w3-round-large w3-red w3-margin" name="don" value="don">Faire un don</button>
 </form>
 </div>
 
-<div id="card2" class="w3-card-4 w3-display-middle w3-center" style="width:80%;">
+<div class="w3-display-middle w3-center w3-panel w3-orange w3-padding-16" style="width:350px">
+  <h1 class="w3-wide" style="text-shadow:1px 1px 0 #ddd"><b>Premier jeu</b></h1>
+</div>
+
+<div id="card2" class="w3-card-4 w3-display-middle w3-center w3-white" style="max-width:600px; width:80%; min-width:500px;">
 <header class="w3-container w3-teal">
     <h4>Choisissez un nombre</h4>
 </header>
@@ -29,10 +24,10 @@
 <span class="w3-badge w3-xlarge w3-red w3-margin-top w3-padding w3-hover-dark-gray">3</span>
 <span class="w3-badge w3-xlarge w3-blue w3-margin-top w3-padding w3-hover-dark-gray">4</span>
 <span class="w3-badge w3-xlarge w3-grey w3-margin-top w3-padding w3-hover-dark-gray">5</span>
-<p><button class="w3-button w3-teal">Valider</button></p>
+<p><button onclick="this.parentElement.parentElement.style.display='none'" class="w3-button w3-teal">Valider</button></p>
 </div>
 
-<div class="w3-card-4 w3-display-middle w3-center" style="width:80%;">
+<div class="w3-card-4 w3-display-middle w3-center w3-white" style="max-width:500px; width:80%; min-width:400px;">
 <header class="w3-container w3-teal">
     <h4>Combien de tiquets voulez-vous mettre en jeu ?</h4>
 </header>
