--- a/Site web/website/templates/login.html
+++ b/Site web/website/templates/login.html
@@ -1,28 +1,19 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
 %}
-<form method="POST">
-  <h3 align="center">Login</h3>
-  <div class="form-group">
-    <label for="firstName">First Name</label>
-    <input
-      type="text"
-      class="form-control"
-      id="firstName"
-      name="firstName"
-      placeholder="Enter first name"
-    />
+
+<div class="w3-card w3-display-middle w3-white" style="width:70%;">
+    <div class="w3-container w3-green">
+      <h2 class="w3-center">Qui est-tu ?</h2>
+    </div>
+
+    <form class="w3-container" method="POST">
+      <p>
+      <input type="text" class="w3-input" id="firstName" name="firstName">
+      <label>Prénom</label></p>
+      <p>
+      <input type="password" class="w3-input" id="password" name="password">
+      <label>Mot de passe</label></p>
+      <p class="w3-center"><button type="submit" class="w3-btn w3-blue-grey">Se connecter</button></p>
+    </form>
   </div>
-  <div class="form-group">
-    <label for="password">Password</label>
-    <input
-      type="password"
-      class="form-control"
-      id="password"
-      name="password"
-      placeholder="Enter password"
-    />
-  </div>
-  <br />
-  <button type="submit" class="btn btn-primary">Login</button>
-</form>
 {% endblock %}
