--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -5,14 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <style>
     body {
-      background-image: url("https://htc-wallpaper.com/wp-content/uploads/2015/03/Colorful-geometric-patterns.jpg");
+      background-image: url({{url_for('static', filename="images/6.jpg")}});
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
     }
+    .circle {
+       border-radius: 50%;
+       width: 50px;
+       height: 50px;
+       border: 5px solid #bbb;
+     }
+     .w3-lobster {
+       font-family: "Lobster", serif;
+     }
     </style>
     <title>{% block title %}Home{% endblock %}</title>
   </head>
@@ -27,6 +38,33 @@
     <li class="w3-border-0">Sylvain<i class="fa fa-star w3-right"> {{players[4].stars}}</i></li>
   </ul>
   </div>
+
+  <div class="w3-container w3-center w3-teal" style="height:80px">
+    <h3 class="w3-right w3-xxlarge">{{user.flouze}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:42px" alt="Coin"></h3>
+  </div>
+  <div class="w3-container w3-center">
+  <form method="POST">
+  <button type="submit" class="w3-button w3-xlarge w3-circle w3-red w3-card-4 w3-margin" name="boutton" value="increment">+</button>
+  <button type="submit" class="w3-btn w3-xlarge w3-round-large w3-red w3-margin" name="boutton" value="don">Faire un don</button>
+  </form>
+  </div>
+
+  {% with messages = get_flashed_messages(with_categories=true) %} {% if
+   messages %} {% for category, message in messages %} {% if category ==
+   'error' %}
+    <div class="w3-panel w3-pale-red w3-round-large w3-border w3-border-red w3-center w3-display-container animate__lightSpeedInRight" style="position: absolute; width:90%; bottom:15px; left:5%;">
+      <i class="fa fa-exclamation-circle w3-display-left w3-xlarge w3-text-red w3-margin-left"></i>
+      <span onclick="this.parentElement.style.display='none'" class="w3-button w3-large w3-display-topright w3-round-large">&times;</span>
+      <h4>{{ message }}</h4>
+    </div>
+   {% else %}
+   <div class="w3-panel w3-pale-green w3-round-large w3-border w3-border-green w3-center w3-display-container" style="position: absolute; width:90%; bottom:15px; left:5%;">
+     <i class="fa fa-info-circle w3-display-left w3-xlarge w3-text-green w3-margin-left"></i>
+     <span onclick="this.parentElement.style.display='none'" class="w3-button w3-large w3-display-topright w3-round-large">&times;</span>
+     <h4>{{ message }}</h4>
+   </div>
+   {% endif %} {% endfor %} {% endif %} {% endwith %}
+
  <div class="container">{% block content %} {% endblock %}</div>
   </body>
 </html>
