--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,16 +1,6 @@
 {% extends "base.html" %} {% block title %}Flouze{% endblock %} {% block content
 %}
 
-<div class="w3-container w3-center w3-teal" style="height:80px">
-  <h3 class="w3-right w3-xxlarge">{{user.flouze}} <img src="https://cdn-icons-png.flaticon.com/512/217/217853.png" class="w3-round" style="width:42px" alt="Coin"></h3>
-</div>
-<div class="w3-container w3-center">
-<form method="POST">
-<button type="submit" class="w3-button w3-xlarge w3-circle w3-red w3-card-4 w3-margin" name="increment" value="increment">+</button>
-<button type="submit" class="w3-btn w3-xlarge w3-round-large w3-red w3-margin" name="don" value="don">Faire un don</button>
-</form>
-</div>
-
 <div class="w3-display-middle w3-center w3-panel w3-orange w3-padding-16" style="width:350px">
   <h1 class="w3-wide" style="text-shadow:1px 1px 0 #ddd"><b>Premier jeu</b></h1>
 </div>
@@ -33,17 +23,27 @@
 </header>
 <select class="w3-select w3-border w3-margin" style="width:50%;" name="option">
 <option value="" disabled="" selected="">Nombre de tickets</option>
-<option value="0">0</option>
-<option value="1">1</option>
-<option value="2">2</option>
-<option value="3">3</option>
-<option value="4">4</option>
-<option value="5">5</option>
-<option value="6">6</option>
-<option value="7">7</option>
-<option value="8">8</option>
-<option value="9">9</option>
-<option value="10">10</option>
+<option value="0">Aucun ticket</option>
+<option value="1">1 ticket</option>
+<option value="2">2 tickets</option>
+<option value="3">3 tickets</option>
+<option value="4">4 tickets</option>
+<option value="5">5 tickets</option>
+<option value="6">6 tickets</option>
+<option value="7">7 tickets</option>
+<option value="8">8 tickets</option>
+<option value="9">9 tickets</option>
+<option value="10">10 tickets</option>
+<option value="10">11 tickets</option>
+<option value="10">12 tickets</option>
+<option value="10">13 tickets</option>
+<option value="10">14 tickets</option>
+<option value="10">15 tickets</option>
+<option value="10">16 tickets</option>
+<option value="10">17 tickets</option>
+<option value="10">18 tickets</option>
+<option value="10">19 tickets</option>
+<option value="10">20 tickets</option>
 </select>
 <button onclick="this.parentElement.style.display='none'" class="w3-button w3-teal">Valider</button>
 </div>
