--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -31,11 +31,11 @@
   <div class="w3-display-topleft" style="width:150px">
   <ul class="w3-ul w3-border w3-light-blue w3-border-light-blue w3-card-2">
     <li class="w3-center w3-border-white"><h4>Participants</h4></li>
-    <li class="w3-border-0">Baptiste<i class="fa fa-star w3-right"> {{players[0].stars}}</i></li>
-    <li class="w3-border-0">Juliette<i class="fa fa-star w3-right"> {{players[1].stars}}</i></li>
-    <li class="w3-border-0">Léa<i class="fa fa-star w3-right"> {{players[2].stars}}</i></li>
-    <li class="w3-border-0">Margot<i class="fa fa-star w3-right"> {{players[3].stars}}</i></li>
-    <li class="w3-border-0">Sylvain<i class="fa fa-star w3-right"> {{players[4].stars}}</i></li>
+    <li class="w3-border-0">{{players[0].name}}<i class="fa fa-star w3-right"> {{players[0].stars}}</i></li>
+    <li class="w3-border-0">{{players[1].name}}<i class="fa fa-star w3-right"> {{players[1].stars}}</i></li>
+    <li class="w3-border-0">{{players[2].name}}<i class="fa fa-star w3-right"> {{players[2].stars}}</i></li>
+    <li class="w3-border-0">{{players[3].name}}<i class="fa fa-star w3-right"> {{players[3].stars}}</i></li>
+    <li class="w3-border-0">{{players[4].name}}<i class="fa fa-star w3-right"> {{players[4].stars}}</i></li>
   </ul>
   </div>
 
