--- a/website/templates/Jeu5-choix.html
+++ b/website/templates/Jeu5-choix.html
@@ -7,21 +7,21 @@
 </header>
 <div class="w3-margin-right w3-margin-left" style="display:flex;">
   <div class="w3-card w3-margin w3-padding w3-half">
-    <p><b>{{players[playerIDs[0]].first_name}}</b></p>
+    <p><b>{{players[playerIDs[0]]["name"]}}</b></p>
     <p><input class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" name="last" type="text" style="width:100px; display:inline-block;"></p>
   </div>
   <div class="w3-card w3-margin w3-padding w3-half">
-    <p><b>{{players[playerIDs[1]].first_name}}</b></p>
+    <p><b>{{players[playerIDs[1]]["name"]}}</b></p>
     <p><input class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" name="last" type="text" style="width:100px; display:inline-block;"></p>
   </div>
 </div>
 <div class="w3-margin-right w3-margin-left" style="display:flex;">
   <div class="w3-card w3-margin w3-padding w3-half">
-    <p><b>{{players[playerIDs[2]].first_name}}</b></p>
+    <p><b>{{players[playerIDs[2]]["name"]}}</b></p>
     <p><input class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" name="last" type="text" style="width:100px; display:inline-block;"></p>
   </div>
   <div class="w3-card w3-margin w3-padding w3-half">
-    <p><b>{{players[playerIDs[3]].first_name}}</b></p>
+    <p><b>{{players[playerIDs[3]]["name"]}}</b></p>
     <p><input class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" name="last" type="text" style="width:100px; display:inline-block;"></p>
   </div>
 </div>
