--- a/website/templates/monitoring.html
+++ b/website/templates/monitoring.html
@@ -12,29 +12,29 @@
 <body>
   <div class="container" style="display:flex; justify-content:space-around;">
     <div class="container w3-lime w3-center w3-margin" style="flex-grow:1;">
-      <p class="w3-xlarge"><b>{{players[0].first_name}}</b></p>
-      <p class="w3-xlarge"><i class="fa fa-star"> {{players[0].stars}}</i></p>
-      <p class="w3-xlarge">{{players[0].flouze}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:28px" alt="Coin"></p>
+      <p class="w3-xlarge"><b>{{players[0]["name"]}}</b></p>
+      <p class="w3-xlarge"><i class="fa fa-star"> {{players[0]["stars"]}}</i></p>
+      <p class="w3-xlarge">{{players[0]["flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:28px" alt="Coin"></p>
     </div>
     <div class="container w3-orange w3-center w3-margin" style="flex-grow:1;">
-      <p class="w3-xlarge"><b>{{players[1].first_name}}</b></p>
-      <p class="w3-xlarge"><i class="fa fa-star"> {{players[1].stars}}</i></p>
-      <p class="w3-xlarge">{{players[1].flouze}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:28px" alt="Coin"></p>
+      <p class="w3-xlarge"><b>{{players[1]["name"]}}</b></p>
+      <p class="w3-xlarge"><i class="fa fa-star"> {{players[1]["stars"]}}</i></p>
+      <p class="w3-xlarge">{{players[1]["flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:28px" alt="Coin"></p>
     </div>
     <div class="container w3-indigo w3-center w3-margin" style="flex-grow:1;">
-      <p class="w3-xlarge"><b>{{players[2].first_name}}</b></p>
-      <p class="w3-xlarge"><i class="fa fa-star"> {{players[2].stars}}</i></p>
-      <p class="w3-xlarge">{{players[2].flouze}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:28px" alt="Coin"></p>
+      <p class="w3-xlarge"><b>{{players[2]["name"]}}</b></p>
+      <p class="w3-xlarge"><i class="fa fa-star"> {{players[2]["stars"]}}</i></p>
+      <p class="w3-xlarge">{{players[2]["flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:28px" alt="Coin"></p>
     </div>
     <div class="container w3-cyan w3-center w3-margin" style="flex-grow:1;">
-      <p class="w3-xlarge"><b>{{players[3].first_name}}</b></p>
-      <p class="w3-xlarge"><i class="fa fa-star"> {{players[3].stars}}</i></p>
-      <p class="w3-xlarge">{{players[3].flouze}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:28px" alt="Coin"></p>
+      <p class="w3-xlarge"><b>{{players[3]["name"]}}</b></p>
+      <p class="w3-xlarge"><i class="fa fa-star"> {{players[3]["stars"]}}</i></p>
+      <p class="w3-xlarge">{{players[3]["flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:28px" alt="Coin"></p>
     </div>
     <div class="container w3-amber w3-center w3-margin" style="flex-grow:1;">
-      <p class="w3-xlarge"><b>{{players[4].first_name}}</b></p>
-      <p class="w3-xlarge"><i class="fa fa-star"> {{players[4].stars}}</i></p>
-      <p class="w3-xlarge">{{players[4].flouze}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:28px" alt="Coin"></p>
+      <p class="w3-xlarge"><b>{{players[4]["name"]}}</b></p>
+      <p class="w3-xlarge"><i class="fa fa-star"> {{players[4]["stars"]}}</i></p>
+      <p class="w3-xlarge">{{players[4]["flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:28px" alt="Coin"></p>
     </div>
   </div>
   <form class="w3-center" method="POST">
