--- a/website/templates/faire_un_don.html
+++ b/website/templates/faire_un_don.html
@@ -38,10 +38,10 @@
   <form class="w3-container">
   <select class="w3-select w3-border w3-margin w3-round-large w3-center" style="width:50%;" name="option">
     <option value="" disabled="" selected="">Destinataire</option>
-  <option value="0">{{players[playerIDs[0]]["name"]}}</option>
-  <option value="1">{{players[playerIDs[1]]["name"]}}</option>
-  <option value="2">{{players[playerIDs[2]]["name"]}}</option>
-  <option value="3">{{players[playerIDs[3]]["name"]}}</option>
+  <option value="0">{{otherPlayers[0]["name"]}}</option>
+  <option value="1">{{otherPlayers[1]["name"]}}</option>
+  <option value="2">{{otherPlayers[2]["name"]}}</option>
+  <option value="3">{{otherPlayers[3]["name"]}}</option>
   </select>
   <input class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" name="last" type="text" style="width:100px; display:inline-block;">
   <p><button onclick="this.parentElement.style.display='none'" class="w3-button w3-teal">Envoyer</button></p>
