--- a/website/templates/monitoring.html
+++ b/website/templates/monitoring.html
@@ -39,7 +39,8 @@
   </div>
   <form class="w3-center" method="POST">
     <p>Page actuelle : {{pages[iterator]}}</p>
-    <p><button type="submit" class="w3-button w3-blue" name="boutton" value="increment">Page suivante</button></p>
+    <p><button type="submit" class="w3-button w3-blue" name="boutton" value="page précedente">Page précedante</button>
+      <button type="submit" class="w3-button w3-blue" name="boutton" value="page suivante">Page suivante</button></p>
   </form>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
