--- a/website/templates/Jeu1-choix.html
+++ b/website/templates/Jeu1-choix.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Flouze - Jeu 1{% endblock %} {% block content
+{% extends "base+don.html" %} {% block title %}Flouze - Jeu 1{% endblock %} {% block content
 %}
 
 <div class="w3-card-4 w3-display-middle w3-center w3-white" style="max-width:500px; width:80%; min-width:400px;">
@@ -30,7 +30,7 @@
 <option value="19">19 tickets</option>
 <option value="20">20 tickets</option>
 </select>
-<button type="submit" onclick="this.parentElement.style.display='none'" class="w3-button w3-teal" name="boutton" value="jeu1-choix">Valider</button></form>
+<button type="submit" class="w3-button w3-teal" name="boutton" value="jeu1-choix">Valider</button></form>
 </div>
 
 {% endblock %}
