--- a/website/templates/Jeu4-choix.html
+++ b/website/templates/Jeu4-choix.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Flouze - Jeu 4{% endblock %} {% block content
+{% extends "base+don.html" %} {% block title %}Flouze - Jeu 4{% endblock %} {% block content
 %}
 
 <div id="card2" class="w3-card-4 w3-display-middle w3-center w3-white">
