--- a/website/templates/Jeu5-choix.html
+++ b/website/templates/Jeu5-choix.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block content
+{% extends "base+don.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block content
 %}
 
 <form class="w3-card-4 w3-display-middle w3-center w3-white" style="width:400px;">
 <header class="w3-container w3-teal">
-    <h4>Combien shouaitez vous investir ?</h4>
+    <h4>Veuillez faire une offre aux autres joueurs</h4>
 </header>
 <div class="w3-margin-right w3-margin-left" style="display:flex;">
   <div class="w3-card w3-margin w3-padding w3-half">
