--- a/website/templates/Jeu2-title.html
+++ b/website/templates/Jeu2-title.html
@@ -1,8 +1,8 @@
-{% extends "base+don.html" %} {% block title %}Flouze - Jeu 1{% endblock %} {% block content%}
+{% extends "base+don.html" %} {% block title %}Flouze - Jeu 2{% endblock %} {% block content%}
 
 <div class="w3-card-4 w3-display-middle w3-center w3-teal" style="width:400px;">
   <div class="w3-container w3-margin w3-white">
-    <h1>Premier jeu</h1>
+    <h1>Deuxième jeu</h1>
   </div>
 </div>
 
