--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -39,8 +39,8 @@
   </ul>
   </div>
 
-  <div class="w3-container w3-center w3-teal" style="height:80px">
-    <h3 class="w3-right w3-xxlarge">{{user["flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:42px" alt="Coin"></h3>
+  <div class="w3-container w3-teal" style="height:80px">
+    <h3 class="w3-right w3-xxlarge">{{user["flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:40px" alt="Coin"></h3>
   </div>
 
   {% with messages = get_flashed_messages(with_categories=true) %} {% if
