--- a/website/templates/Jeu5-choix.html
+++ b/website/templates/Jeu5-choix.html
@@ -1,32 +1,32 @@
 {% extends "base+don.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block content
 %}
 
-<form class="w3-card-4 w3-display-middle w3-center w3-white" style="width:400px;">
+<form method="POST" class="w3-card-4 w3-display-middle w3-center w3-white" style="width:400px;">
 <header class="w3-container w3-teal">
     <h4>Veuillez faire une offre aux autres joueurs</h4>
 </header>
 <div class="w3-margin-right w3-margin-left" style="display:flex;">
   <div class="w3-card w3-margin w3-padding w3-half">
     <p><b>{{otherPlayers[0]["name"]}}</b></p>
-    <p><input class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" name="last" type="text" style="width:100px; display:inline-block;"></p>
+    <p><input class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" name={{otherPlayers[0]['name']}} type="number" style="width:100px; display:inline-block;"></p>
   </div>
   <div class="w3-card w3-margin w3-padding w3-half">
     <p><b>{{otherPlayers[1]["name"]}}</b></p>
-    <p><input class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" name="last" type="text" style="width:100px; display:inline-block;"></p>
+    <p><input class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" name={{otherPlayers[1]['name']}} type="number" style="width:100px; display:inline-block;"></p>
   </div>
 </div>
 <div class="w3-margin-right w3-margin-left" style="display:flex;">
   <div class="w3-card w3-margin w3-padding w3-half">
     <p><b>{{otherPlayers[2]["name"]}}</b></p>
-    <p><input class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" name="last" type="text" style="width:100px; display:inline-block;"></p>
+    <p><input class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" name={{otherPlayers[2]['name']}} type="number" style="width:100px; display:inline-block;"></p>
   </div>
   <div class="w3-card w3-margin w3-padding w3-half">
     <p><b>{{otherPlayers[3]["name"]}}</b></p>
-    <p><input class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" name="last" type="text" style="width:100px; display:inline-block;"></p>
+    <p><input class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" name={{otherPlayers[3]['name']}} type="number" style="width:100px; display:inline-block;"></p>
   </div>
 </div>
 <p>
-<button onclick="this.parentElement.style.display='none'" class="w3-button w3-teal">Faire une proposition</button>
+<button type="submit" name="boutton" value="Jeu5-choix" class="w3-button w3-teal">Faire une proposition</button>
 <p>
 </form>
 
