--- a/website/templates/monitoring.html
+++ b/website/templates/monitoring.html
@@ -48,7 +48,7 @@
     </div>
   </div>
   <form class="w3-center" method="POST">
-    <p>Page actuelle : {{pages[iterator]}}</p>
+    <p>Page actuelle : {{pages[iterator]['url']}}</p>
     <p><button type="submit" class="w3-button w3-blue" name="boutton" value="page précedente">Page précedante</button>
       <button type="submit" class="w3-button w3-blue" name="boutton" value="page suivante">Page suivante</button></p>
   </form>
