Log + transition jeu 5

--- a/website/templates/monitoring.html
+++ b/website/templates/monitoring.html
@@ -52,9 +52,13 @@
     <p><button type="submit" class="w3-button w3-blue" name="boutton" value="page précedente">Page précedante</button>
       <button type="submit" class="w3-button w3-blue" name="boutton" value="page suivante">Page suivante</button></p>
   </form>
+
   <div class="w3-center">
-    bonus : {{bonus}}
+    {% for i in range(imax) %}
+    <p>{{log[-i-1]}}</p>
+    {% endfor %}
   </div>
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
    <script type="text/javascript" charset="utf-8">
@@ -62,6 +66,10 @@
      socket.on('changed', function() {
          window.location = window.location;
      });
+
+     function disableBack() { window.history.forward(); }
+     setTimeout("disableBack()", 0);
+     window.onunload = function () { null };
    </script>
 
   </body>
