--- a/website/templates/Jeu5-choix.html
+++ b/website/templates/Jeu5-choix.html
@@ -1,5 +1,4 @@
-{% extends "base+don.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block content
-%}
+{% extends "base.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block inside%}
 
 <form method="POST" class="w3-card-4 w3-display-middle w3-center w3-white" style="width:400px;">
 <header class="w3-container w3-teal">
