working version, same action twice prevented

--- a/website/templates/Jeu2-reveal.html
+++ b/website/templates/Jeu2-reveal.html
@@ -36,6 +36,7 @@
         <div class="circle w3-xxlarge w3-cell w3-display-middle">{{players[4]["choix"]}}</div>
       </div>
     </div>
+  </div>
 </div>
 
 {% endblock %}
