--- a/website/templates/Jeu3-choix.html
+++ b/website/templates/Jeu3-choix.html
@@ -1,5 +1,8 @@
 {% extends "base+don.html" %} {% block title %}Flouze - Jeu 3{% endblock %} {% block content%}
+{% if user["saved_flouze"] != 0 %}
 <h2 class="w3-text-white w3-teal w3-padding-large" style="position:absolute; top:50px; right:0px">( {{user["saved_flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:30px" alt="Coin"> )</h2>
+{% endif %}
+
 <form method="POST" class="w3-card-4 w3-display-middle w3-center w3-white">
 <header class="w3-container w3-teal">
     <h4>Combien shouaitez vous investir ?</h4>
