--- a/website/templates/Jeu3-title.html
+++ b/website/templates/Jeu3-title.html
@@ -1,6 +1,8 @@
 {% extends "base+don.html" %} {% block title %}Flouze - Jeu 3{% endblock %} {% block content%}
-
+{% if user["saved_flouze"] != 0 %}
 <h2 class="w3-text-white w3-teal w3-padding-large" style="position:absolute; top:50px; right:0px">( {{user["saved_flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:30px" alt="Coin"> )</h2>
+{% endif %}
+
 <div class="w3-card-4 w3-display-middle w3-center w3-teal" style="width:400px;">
   <div class="w3-container w3-margin w3-white">
     <h1>Troisième jeu</h1>
