--- a/website/templates/Jeu5-title.html
+++ b/website/templates/Jeu5-title.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block inside%}
+{% extends "base-etoiles.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block inside%}
 
 <div class="w3-card-4 w3-display-middle w3-center w3-teal" style="width:400px;">
   <div class="w3-container w3-margin w3-white">
