--- a/website/templates/don_etoiles.html
+++ b/website/templates/don_etoiles.html
@@ -7,10 +7,10 @@
   <form class="w3-container" method="POST">
   <select name="destinataire" class="w3-select w3-border w3-margin w3-round-large w3-center" style="width:120px;">
     <option value="" disabled="" selected="">Destinataire</option>
-  <option value=0>{{otherPlayers[0]["name"]}}</option>
-  <option value=1>{{otherPlayers[1]["name"]}}</option>
-  <option value=2>{{otherPlayers[2]["name"]}}</option>
-  <option value=3>{{otherPlayers[3]["name"]}}</option>
+    <option value=0>{{players[user['otherPlayers'][0]]["name"]}}</option>
+    <option value=1>{{players[user['otherPlayers'][1]]["name"]}}</option>
+    <option value=2>{{players[user['otherPlayers'][2]]["name"]}}</option>
+    <option value=3>{{players[user['otherPlayers'][3]]["name"]}}</option>
   </select>
   <br><input name="quantité" class="w3-input w3-border w3-round-large w3-center" placeholder="Quantitée" type="number" style="width:120px; display:inline-block;">
   <p>
