--- a/website/templates/en_attente.html
+++ b/website/templates/en_attente.html
@@ -1,4 +1,7 @@
-{% extends "base+don.html" %} {% block title %}Flouze - Jeu 1{% endblock %} {% block content%}
+{% extends "base+don.html" %} {% block title %}Flouze{% endblock %} {% block content%}
+{% if user["saved_flouze"] != 0 %}
+<h2 class="w3-text-white w3-teal w3-padding-large" style="position:absolute; top:50px; right:0px">( {{user["saved_flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:30px" alt="Coin"> )</h2>
+{% endif %}
 
 <div class="w3-panel w3-pale-blue w3-round-large w3-border w3-border-blue w3-center w3-display-container w3-display-middle w3-padding">
   <h5>En attente des autres joueurs</h5>
