--- a/website/templates/don_etoiles.html
+++ b/website/templates/don_etoiles.html
@@ -14,8 +14,8 @@
   </select>
   <br><input name="quantité" class="w3-input w3-border w3-round-large w3-center" placeholder="Quantitée" type="number" style="width:120px; display:inline-block;">
   <p>
-    <button type="submit" name="boutton" value="terminer" class="w3-margin-right w3-button w3-red">Terminer</button>
-    <button type="submit" name="boutton" value="envoyer etoile" class="w3-margin-left w3-button w3-teal">Envoyer</button>
+    <button type="submit" name="boutton" value="envoyer etoile" class="w3-margin-right w3-button w3-teal">Envoyer</button>
+    <button type="submit" name="boutton" value="terminer" class="w3-margin-left w3-button w3-red">Terminer</button>
   </p>
   <p>
 </form>
