--- a/website/templates/monitoring.html
+++ b/website/templates/monitoring.html
@@ -17,6 +17,7 @@
       <p class="w3-xlarge">{{players[0]["flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:28px" alt="Coin"></p>
       <p class="w3-xlarge">{{players[0]["choix"]}}</p>
       <p class="w3-large">{{players[0]["message"]}}</p>
+      <p class="w3-large">{{players[0]["done"]}}</p>
     </div>
     <div class="container w3-orange w3-center w3-margin" style="flex-grow:1;">
       <p class="w3-xlarge"><b>{{players[1]["name"]}}</b></p>
@@ -24,6 +25,7 @@
       <p class="w3-xlarge">{{players[1]["flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:28px" alt="Coin"></p>
       <p class="w3-xlarge">{{players[1]["choix"]}}</p>
       <p class="w3-large">{{players[1]["message"]}}</p>
+      <p class="w3-large">{{players[1]["done"]}}</p>
     </div>
     <div class="container w3-indigo w3-center w3-margin" style="flex-grow:1;">
       <p class="w3-xlarge"><b>{{players[2]["name"]}}</b></p>
@@ -31,6 +33,7 @@
       <p class="w3-xlarge">{{players[2]["flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:28px" alt="Coin"></p>
       <p class="w3-xlarge">{{players[2]["choix"]}}</p>
       <p class="w3-large">{{players[2]["message"]}}</p>
+      <p class="w3-large">{{players[2]["done"]}}</p>
     </div>
     <div class="container w3-cyan w3-center w3-margin" style="flex-grow:1;">
       <p class="w3-xlarge"><b>{{players[3]["name"]}}</b></p>
@@ -38,6 +41,7 @@
       <p class="w3-xlarge">{{players[3]["flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:28px" alt="Coin"></p>
       <p class="w3-xlarge">{{players[3]["choix"]}}</p>
       <p class="w3-large">{{players[3]["message"]}}</p>
+      <p class="w3-large">{{players[3]["done"]}}</p>
     </div>
     <div class="container w3-amber w3-center w3-margin" style="flex-grow:1;">
       <p class="w3-xlarge"><b>{{players[4]["name"]}}</b></p>
@@ -45,6 +49,7 @@
       <p class="w3-xlarge">{{players[4]["flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:28px" alt="Coin"></p>
       <p class="w3-xlarge">{{players[4]["choix"]}}</p>
       <p class="w3-large">{{players[4]["message"]}}</p>
+      <p class="w3-large">{{players[4]["done"]}}</p>
     </div>
   </div>
   <form class="w3-center" method="POST">
