--- a/website/templates/Jeu5-Valider.html
+++ b/website/templates/Jeu5-Valider.html
@@ -6,8 +6,8 @@
   </header>
   <form class="w3-container" method="POST">
   <p>
-    <button type="submit" name="boutton" value=1 class="w3-margin-right w3-button w3-red" style="width:120px;">Accepter</button>
-    <button type="submit" name="boutton" value=0 class="w3-margin-left w3-button w3-teal" style="width:120px;">Refuser</button>
+    <button type="submit" name="boutton" value=0 class="w3-margin-right w3-button w3-red" style="width:120px;">Refuser</button>
+    <button type="submit" name="boutton" value=1 class="w3-margin-left w3-button w3-teal" style="width:120px;">Accpeter</button>
   </p>
   <p>
 </form>
