--- a/website/templates/donner_des_etoiles.html
+++ b/website/templates/donner_des_etoiles.html
@@ -6,8 +6,8 @@
   </header>
   <form class="w3-container" method="POST">
   <p>
-    <button type="submit" name="boutton" value="terminer" class="w3-margin-right w3-button w3-red" style="width:120px;">C'est mort</button>
-    <button type="submit" name="boutton" value="léguer etoiles" class="w3-margin-left w3-button w3-teal" style="width:120px;">OUI</button>
+    <button type="submit" name="boutton" value="léguer etoiles" class="w3-margin-right w3-button w3-teal" style="width:120px;">OUI</button>
+    <button type="submit" name="boutton" value="terminer" class="w3-margin-left w3-button w3-red" style="width:120px;">C'est mort</button>
   </p>
   <p>
 </form>
